# nrf91_cert_provisioner

./: .gitignore  CMakeLists.txt  Kconfig  README.md  prj.conf
certificates/: AmazonRootCA1.example.pem  README.md  device-certificate.example.crt  private-key.example.key
src/: cert_provision.c  cert_provision.h  main.c
